vlib/v/checker/tests/array_sort_with_compare_err.vv
fn main() {
	mut names := ['aaa', 'bbb', 'ccc']

	names.sort_with_compare(sort_by_file_base)
	println(names)

	names.sort_with_compare(22)
	println(names)
}

fn sort_by_file_base(a string, b string) int {
	return int(a > b)
}
